Multiple fixes to spec creation
- fix the calibration mapping for the validation notebook
- fix the notebook to create ground truth for leg by:
    - adding multiple examples of methods to find the trajectories
    - fixed the mapping to the new format
- fix the spec
    - change the 52 bus stop polygon to match
    - fix the polygon for the foothill bus stop to not overlap the trajectory
    - fix the trajectory of the foothill walk to avoid repeated points
    - fix the formatting of other polygons to not be as verbose

--- a/spec_creation/evaluation.spec.sample
+++ b/spec_creation/evaluation.spec.sample
@@ -214,38 +214,14 @@
                             "type": "Polygon",
                             "coordinates": [
                                 [
-                                    [
-                                        -122.08355963230133,
-                                        37.39091642895306
-                                    ],
-                                    [
-                                        -122.08428382873535,
-                                        37.38975713188671
-                                    ],
-                                    [
-                                        -122.08383858203888,
-                                        37.389573859018185
-                                    ],
-                                    [
-                                        -122.08340406417847,
-                                        37.390196132517175
-                                    ],
-                                    [
-                                        -122.08311975002289,
-                                        37.39012793841312
-                                    ],
-                                    [
-                                        -122.08280861377716,
-                                        37.390656441096894
-                                    ],
-                                    [
-                                        -122.08355426788331,
-                                        37.39096757399895
-                                    ],
-                                    [
-                                        -122.08355963230133,
-                                        37.39091642895306
-                                    ]
+                                    [ -122.08355963230133, 37.39091642895306 ],
+                                    [ -122.08428382873535, 37.38975713188671 ],
+                                    [ -122.08383858203888, 37.389573859018185 ],
+                                    [ -122.08340406417847, 37.390196132517175 ],
+                                    [ -122.08311975002289, 37.39012793841312 ],
+                                    [ -122.08280861377716, 37.390656441096894 ],
+                                    [ -122.08355426788331, 37.39096757399895 ],
+                                    [ -122.08355963230133, 37.39091642895306 ]
                                 ]
                             ]
                         }
@@ -259,30 +235,11 @@
                             "type": "Polygon",
                             "coordinates": [
                                 [
-                                    [
-                                        -122.07047581672668,
-                                        37.3884784746256
-                                    ],
-                                    [
-                                        -122.07036852836607,
-                                        37.388065037445536
-                                    ],
-                                    [
-                                        -122.06985890865326,
-                                        37.38810765994063
-                                    ],
-                                    [
-                                        -122.06974625587463,
-                                        37.38833355876014
-                                    ],
-                                    [
-                                        -122.06999838352203,
-                                        37.388585030230324
-                                    ],
-                                    [
-                                        -122.07047581672668,
-                                        37.3884784746256
-                                    ]
+                                    [ -122.0847062766552, 37.38615232803594 ],
+                                    [ -122.08424627780914, 37.38591043874643 ],
+                                    [ -122.08412557840347, 37.386083064662735 ],
+                                    [ -122.08460032939912, 37.38629298576617 ],
+                                    [ -122.0847062766552, 37.38615232803594 ]
                                 ]
                             ]
                         }
@@ -344,26 +301,12 @@
                         "type": "Polygon",
                         "coordinates": [
                             [
-                                [
-                                    -122.12685048580168,
-                                    37.362440271054396
-                                ],
-                                [
-                                    -122.1265272796154,
-                                    37.362024558461364
-                                ],
-                                [
-                                    -122.12642133235931,
-                                    37.362132217584644
-                                ],
-                                [
-                                    -122.1267431974411,
-                                    37.36249996292995
-                                ],
-                                [
-                                    -122.12685048580168,
-                                    37.362440271054396
-                                ]
+                                [ -122.12678946554661, 37.3624887707069 ],
+                                [ -122.1268632262945, 37.36245146328467 ],
+                                [ -122.12655209004879, 37.362050140841276 ],
+                                [ -122.12643943727016, 37.36215779992784 ],
+                                [ -122.12671637535095, 37.36252447922224 ],
+                                [ -122.12678946554661, 37.3624887707069 ]
                             ]
                         ]
                     }
@@ -377,31 +320,16 @@
                         "type": "Polygon",
                         "coordinates": [
                             [
-                                [
-                                    -122.12924435734747,
-                                    37.36135941352246
-                                ],
-                                [
-                                    -122.12901771068573,
-                                    37.36108013616577
-                                ],
-                                [
-                                    -122.12868243455887,
-                                    37.361213379309085
-                                ],
-                                [
-                                    -122.12891444563866,
-                                    37.361499051811045
-                                ],
-                                [
-                                    -122.12924435734747,
-                                    37.36135941352246
-                                ]
+                                [ -122.12924435734747, 37.36135941352246 ],
+                                [ -122.12901771068573, 37.36108013616577 ],
+                                [ -122.12868243455887, 37.361213379309085 ],
+                                [ -122.12891444563866, 37.361499051811045 ],
+                                [ -122.12924435734747, 37.36135941352246 ]
                             ]
                         ]
                     }
                 },
-                "polyline": "mj`cFd{khVIHEGJIKHk@uAGOVQBFDHBHDH@BBFHRt@i@BFDHRRDDHFFJDJn@~AN`@L^_@Va@TOb@D\\Pb@JRF^Df@????f@xA????j@]ULUNg@yAEg@G_@KSQc@E]Nc@`@U^W"
+                "polyline": "mj`cFd{khVIHEGk@uAGOVQBFDHBHDH@BBFHRt@i@BFDHRRDDHFFJDJn@~AN`@L^_@Va@TOb@D\\Pb@JRF^Df@????f@xA????j@]"
             }
         ]
       }
