added attrdict to conda env

--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -13,6 +13,7 @@ dependencies:
 - scipy=1.4.1
 - shapely=1.6.4
 - geopandas=0.6.1
+- attrdict=2.0.1
 - pip:
     - osmapi==1.2.*
     - polyline==1.3.*
