--- a/.github/workflows/link-checks.yml
+++ b/.github/workflows/link-checks.yml
@@ -11,4 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: gaurav-nelson/github-action-markdown-link-check@0.6.0
+    - uses: gaurav-nelson/github-action-markdown-link-check@v1
+        with:
+          use-verbose-mode: 'yes'
+          config-file: '.github/workflows/mlc_config.json'
