--- a/environment.yml
+++ b/environment.yml
@@ -2,20 +2,21 @@ name: emissioneval
 channels:
 - conda-forge
 dependencies:
-- arrow=0.13.1
-- matplotlib=3.1.3
-- pandas=1.0.3
-- python=3.8.2
-- pip=20.2.2
-- requests=2.23.0
-- scipy=1.4.1
-- shapely=1.8.4
-- geopandas=0.9.0
+- arrow=1.2.3
+
+
+- matplotlib=3.7.1
+- pandas=1.5.3
+- pip=23.0
+- requests=2.28.2
+- scipy=1.10.0
+- shapely=2.0.1
+- geopandas=0.12.2
 - pip:
-    - osmapi==1.2.*
-    - polyline==1.3.*
-    - anytree==2.6.*
-    - utm==0.5.*
-    - branca==0.3.*
-    - folium==0.8.*
-    - geojson==2.3.*
+    - osmapi==3.1.0
+    - polyline==2.0.0
+    - anytree==2.8.0
+    - utm==0.7.0
+    - branca==0.6.0
+    - folium==0.14.0
+    - geojson==3.0.1
